WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92786
[chromium] Hit test points are being clipped by layers that should not clip.
https://bugs.webkit.org/show_bug.cgi?id=92786
Summary
[chromium] Hit test points are being clipped by layers that should not clip.
Shawn Singh
Reported
2012-07-31 13:00:53 PDT
Patch coming soon. When checking if ancestors clip the hit-testing point, we are accidentally checking all layers, instead of only layers that actually clip something.
Attachments
Patch
(6.80 KB, patch)
2012-07-31 13:08 PDT
,
Shawn Singh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shawn Singh
Comment 1
2012-07-31 13:08:57 PDT
Created
attachment 155614
[details]
Patch
James Robinson
Comment 2
2012-07-31 14:37:39 PDT
Comment on
attachment 155614
[details]
Patch R=me
WebKit Review Bot
Comment 3
2012-07-31 16:38:56 PDT
Comment on
attachment 155614
[details]
Patch Clearing flags on attachment: 155614 Committed
r124270
: <
http://trac.webkit.org/changeset/124270
>
WebKit Review Bot
Comment 4
2012-07-31 16:38:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug