[chromium] Hit test points are being clipped by layers that should not clip https://bugs.webkit.org/show_bug.cgi?id=92786

Reviewed by James Robinson.

Source/WebCore:

On impl-side hit testing for chromium compositor, we are
accidentally checking all ancestor layers for clipping, instead of
only layers that actually clip something. This patch fixes it.

Added new unit test that reproduces the scenario:
  CCLayerTreeHostCommonTest.verifyHitTestingForNonClippingIntermediateLayer

* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::pointIsClippedBySurfaceOrClipRect):

Source/WebKit/chromium:

* tests/CCLayerTreeHostCommonTest.cpp: adds a test where the
  hit-testable layer does not overlap its parent. The parent does
  not clip, so the layer should still be hittable.


Canonical link: https://commits.webkit.org/110645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124270 268f45cc-cd09-0410-ab3c-d52691b4dbfc